[package]
edition = "2021"
name = "llama-http"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
tokio = { version = "1.26.0", features = ["full"] }

llama-rs = {git = "https://github.com/setzer22/llama-rs.git"}
clap = { version = "4.1.9", features = ["derive"] }
serde = { version = "1.0.156", features = ["derive"] }
rand = "0.8.5"
flume = "0.10.14"
futures-util = "0.3.27"
